# kovaak-stats

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: release-playbook.md  ui-direction.md
src/: App.css  App.tsx  breakdowns-view-model.test.ts  breakdowns-view-model.ts  dashboard-view-model.test.ts  dashboard-view-model.ts  index.css  playtime-utils.ts  practice-drafts.test.ts  practice-drafts.ts  training-insights.test.ts  training-insights.ts  types.ts  ui-state.test.ts  ui-state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  parser.rs  playtime.rs  tracking.rs  types.rs
src/components/primitives/: DataTable.tsx  EmptyState.tsx  MetricChip.tsx  PanelCard.tsx  SectionHeader.tsx
src/views/: AnalysisView.tsx  BreakdownsView.tsx  CalendarView.tsx  CoachView.tsx  OverviewView.tsx  PracticeView.tsx  SettingsView.tsx  TodayView.tsx
